# MicroPNM

./: Cargo.toml  LICENSE  README.md
src/: binary.ppm  lib.rs
